# backend

./: README.md  main.py
tripp-travel/: main.py  pyproject.toml
tripp-travel/tests/: test_tripp_travel.py
tripp-travel/tripp_travel/: login.py
