[tool.poetry]
name = "tripp-travel"
version = "0.1.0"
description = ""
authors = ["venky120041 <venky120041@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
alembic = "^1.7.7"
pylint = "^2.13.4"
flake8 = "^4.0.1"
black = "^22.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
